pkg/lang/testdata/ub/config/invalid/state-var-reference.ub
state: {
  @backend: s3
  bucket:   var.bucket
}
